--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,45 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #fff;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: black;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.profile {
+  padding: 40px;
+  border: 8px solid lightgray;
+  border-radius: 20px;
+  text-align: start;
+}
+
+.profile:first-child {
+  margin-bottom: 30px;
+}
+
+p {
+  margin: 0;
+  line-height: 1.5;
+}
+
+p:first-child {
+  font-size: 35px;
+}
+span {
+  display: inline-block;
+  font-style: italic;
+  text-decoration: underline;
+  color: darkslategrey;
+  font-size: 16px;
+  margin-top: 20px;
 }
