--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,67 @@ span {
   font-size: 16px;
   margin-top: 20px;
 }
+
+#root {
+  display: flex;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  width: 50vw;
+  height: 40vh;
+  padding: 15%;
+  background-color: #e1eff5;
+  border-radius: 20px;
+  justify-content: center;
+}
+
+.input-wrap {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+label {
+  margin-bottom: 10px;
+}
+
+input {
+  border: 1px solid #E0E0E0;
+  border-radius: 4px;
+  padding: 10px 12px;
+  outline: none;
+  transition: all 0.3s;
+}
+
+input::placeholder {
+  opacity: 0.5;
+  font-weight: 400;
+  font-size: 14px;
+}
+
+input:hover {
+  border-color: #18A0FB;
+}
+
+button {
+  color: #fff;
+  font-size: 16px;
+  font-weight: 700;
+  display: block;
+  padding: 10px;
+  text-align: center;
+  background-color: #18A0FB;
+  border-radius: 5px;
+  border: 1px solid #18A0FB;
+  cursor: pointer;
+  width: 100%;
+  margin-top: 40px;
+  transition: all 1s;
+}
+
+button:hover {
+  background-color: #fff;
+  color: #18A0FB;
+}
